[tool.poetry]
name = "wp-pdf-exporter"
version = "0.1.0"
description = ""
authors = ["Shun Sambongi <shundev3@gmail.com>"]
packages = [{ include = "exporter", from = "src" }, { include = "wordpress", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
isort = "^5.6.4"
flake8 = "^3.8.4"

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
